Rename package and app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">DaggerProject</string>
+    <string name="app_name">Android Arch</string>
     <string name="forgot_password">Forgot password</string>
 </resources>
